feat: new Reassignment struct
