# internal/models/reassignment.go
@@ -1,0 +1,6 @@
+package models
+
+type Reassignment struct {
+	OldReviewer string
+	NewReviewer string
+}
